[package]
authors.workspace       = true
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
keywords.workspace      = true
license.workspace       = true
name                    = "hpl-warp-native"
repository.workspace    = true
version.workspace       = true

[lib]
crate-type = [ "cdylib", "rlib" ]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = [ "cosmwasm-std/backtraces" ]
# use library feature to disable all instantiate/execute/query exports
default = [ "osmosis" ]
library = [  ]

injective = [  ]
osmosis   = [  ]

[package.metadata.optimizer]
builds        = [ { name = "injective", features = [ "injective" ], default-features = false }, { name = "osmosis", features = [ "osmosis" ], default-features = false } ]
default-build = true

[dependencies]
cosmwasm-schema.workspace  = true
cosmwasm-std.workspace     = true
cosmwasm-storage.workspace = true

cw-storage-plus.workspace = true
cw-utils.workspace        = true
cw2.workspace             = true

ripemd.workspace = true
sha2.workspace   = true

bech32.workspace          = true
prost.workspace           = true
prost-types.workspace     = true
schemars.workspace        = true
serde.workspace           = true
serde-json-wasm.workspace = true

thiserror.workspace = true

hpl-connection.workspace = true
hpl-interface.workspace  = true
hpl-ownable.workspace    = true
hpl-router.workspace     = true
hpl-utils.workspace      = true

[dev-dependencies]
serde-json-wasm.workspace = true

anyhow.workspace          = true
ibcx-test-utils.workspace = true
k256.workspace            = true
rstest.workspace          = true
sha3.workspace            = true
